fix: z-index

--- a/custom-implementation/src/components/header.css
+++ b/custom-implementation/src/components/header.css
@@ -1,3 +1,6 @@
+.custom-header {
+	z-index: 60;
+}
 
 .custom-header nav a {
 	text-decoration: none;
